--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 
   <p id="nounRes"></p>
 
-  <script  src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script  src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
 
